Changed Copyright to Manipal University Jaipur and added Logo

--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,13 @@
 baseurl: ""
 
+url: "https://mfossociety.github.io/"
+
 sass:
-    sass_dir: css
-    style: compressed
+  sass_dir: css
+  style: compressed
 
 plugins:
-    - jekyll-gzip
+  - jekyll-gzip
+  - jekyll-sitemap
 
 theme: jekyll-theme-cayman
